--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-    "dependencies": {
-        "file-saver": "^2.0.5",
-        "golden-layout": "^2.6.0",
-        "monaco-editor": "^0.49.0",
-        "yaserver": "^0.4.0"
-    },
-    "scripts": {
-        "server": "yaserver --root ./ --port 8000"
-    }
+  "dependencies": {
+    "file-saver": "^2.0.5",
+    "golden-layout": "^2.6.0",
+    "monaco-editor": "^0.49.0",
+    "yaserver": "^0.4.0"
+  },
+  "scripts": {
+    "server": "yaserver --root ./ --port 8000"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.7.0",
+    "@playwright/test": "^1.45.1",
+    "@types/node": "^20.14.10",
+    "eslint": "^9.7.0",
+    "globals": "^15.8.0"
+  }
 }
