--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@eslint/js": "^9.7.0",
     "@playwright/test": "^1.45.1",
     "@types/node": "^20.14.10",
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
     "eslint": "^9.7.0",
     "globals": "^15.8.0"
   }
